--- a/2024/02/.gitignore
+++ b/2024/02/.gitignore
@@ -1,15 +1,13 @@
-target
+target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/*
-!**/src/test/**/target/*
+!**/src/main/**/target/
+!**/src/test/**/target/
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
-.idea/libraries/*
-.idea
-target/*
+.idea/libraries/
 *.iws
 *.iml
 *.ipr
@@ -24,12 +22,12 @@ target/*
 .sts4-cache
 
 ### NetBeans ###
-nbproject/private/*
-nbbuild/*
-dist/*
-nbdist/*
-.nb-gradle/*
-build/*
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
@@ -38,5 +36,3 @@ build/*
 
 ### Mac OS ###
 .DS_Store
-
-aocinput
