--- a/2024/01/pom.xml
+++ b/2024/01/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>xyz.alphaline</groupId>
-    <artifactId>aoc2024_01</artifactId>
+    <artifactId>AoC2024_01</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
